--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                             <a href="views/booking.html" class="btn btn-warning btn-lg px-4">
                                 <i class="fas fa-car"></i> Đặt xe ngay
                             </a>
-                            <button class="btn btn-outline-light btn-lg px-4" onclick="showAuthModal()">
+                            <button id="signup-btn" class="btn btn-outline-light btn-lg px-4" onclick="showAuthModal()">
                                 <i class="fas fa-user-plus"></i> Đăng ký tài khoản
                             </button>
                         </div>
