Cleanup Phase 2: Remove redundant files and optimize project structure
- Remove login.html (redirect only file)
- Remove booking-local.html (duplicate of booking.html)
- Remove driver-info.html (unused in current flow)
- Remove temp.html from avatars folder
- Remove migration scripts (fix_empty_user_status.js, migrate-notifications.js)
- Remove test/debug database scripts (clearSeedData.js, testConnection.js)
- Update driver-registration.html to use index.html instead of login.html
- Expand i18n system with 100+ translations for all pages
- Add language-switcher.js for global language switching
- Update CLEANUP_REPORT.md with Phase 2 details

Total files removed: 8 files (~51KB)
Total improvements: Better maintainability, cleaner codebase, faster performance

--- a/public/driver-registration.html
+++ b/public/driver-registration.html
@@ -222,7 +222,7 @@
                 if (!token) {
                     showError('Bạn cần đăng nhập trước khi đăng ký tài xế');
                     setTimeout(() => {
-                        window.location.href = 'login.html';
+                        window.location.href = 'index.html';
                     }, 2000);
                     return;
                 }
@@ -276,7 +276,7 @@
                 if (!token || !userJson) {
                     showError('Bạn cần đăng nhập trước khi đăng ký tài xế');
                     setTimeout(() => {
-                        window.location.href = 'login.html';
+                        window.location.href = 'index.html';
                     }, 2000);
                     return;
                 }
@@ -301,7 +301,7 @@
                 console.error('Error checking user role on driver registration page', err);
                 showError('Có lỗi xảy ra, vui lòng đăng nhập lại');
                 setTimeout(() => {
-                    window.location.href = 'login.html';
+                    window.location.href = 'index.html';
                 }, 2000);
             }
         });
