--- a/public/index.html
+++ b/public/index.html
@@ -304,63 +304,129 @@
     <!-- Modals -->
     <!-- Auth Modal -->
     <div class="modal fade" id="authModal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="authModalTitle">Đăng nhập</h5>
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content auth-modal-content">
+                <div class="modal-header border-0 pb-0">
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body px-4 pb-4">
+                    <!-- Auth Header -->
+                    <div class="text-center mb-4">
+                        <div class="auth-icon-wrapper mb-3">
+                            <i class="fas fa-user-circle fa-4x text-primary"></i>
+                        </div>
+                        <h4 class="fw-bold mb-1" id="authModalTitle">Đăng nhập</h4>
+                        <p class="text-muted small" id="authModalSubtitle">Chào mừng bạn quay trở lại</p>
+                    </div>
+
                     <!-- Login Form -->
                     <form id="login-form" class="auth-form">
                         <div class="mb-3">
-                            <label class="form-label">Email hoặc Số điện thoại</label>
-                            <input type="text" class="form-control" id="login-identifier" required>
+                            <label class="form-label small fw-semibold text-dark">Email hoặc Số điện thoại</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-user text-muted"></i>
+                                </span>
+                                <input type="text" class="form-control border-start-0 ps-0" id="login-identifier" 
+                                       placeholder="Nhập email hoặc số điện thoại" required>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Mật khẩu</label>
-                            <input type="password" class="form-control" id="login-password" required>
+                            <label class="form-label small fw-semibold text-dark">Mật khẩu</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-lock text-muted"></i>
+                                </span>
+                                <input type="password" class="form-control border-start-0 ps-0" id="login-password" 
+                                       placeholder="Nhập mật khẩu" required>
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Đăng nhập</button>
+                        <button type="submit" class="btn btn-primary w-100 py-2 fw-semibold mb-2">
+                            <i class="fas fa-sign-in-alt me-2"></i>Đăng nhập
+                        </button>
                     </form>
 
                     <!-- Register Form -->
                     <form id="register-form" class="auth-form d-none">
                         <div class="mb-3">
-                            <label class="form-label">Họ và tên</label>
-                            <input type="text" class="form-control" id="register-name" required>
+                            <label class="form-label small fw-semibold text-dark">Họ và tên</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-id-card text-muted"></i>
+                                </span>
+                                <input type="text" class="form-control border-start-0 ps-0" id="register-name" 
+                                       placeholder="Nhập họ và tên" required>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Vai trò</label>
-                            <select class="form-select" id="register-role" required>
-                                <option value="khach_hang">Người dùng</option>
-                                <option value="tai_xe">Tài xế</option>
-                            </select>
+                            <label class="form-label small fw-semibold text-dark">Vai trò</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-user-tag text-muted"></i>
+                                </span>
+                                <select class="form-select border-start-0 ps-0" id="register-role" required>
+                                    <option value="khach_hang">Người dùng</option>
+                                    <option value="tai_xe">Tài xế</option>
+                                </select>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Email</label>
-                            <input type="email" class="form-control" id="register-email" required>
+                            <label class="form-label small fw-semibold text-dark">Email</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-envelope text-muted"></i>
+                                </span>
+                                <input type="email" class="form-control border-start-0 ps-0" id="register-email" 
+                                       placeholder="Nhập địa chỉ email" required>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Số điện thoại</label>
-                            <input type="tel" class="form-control" id="register-phone" required>
+                            <label class="form-label small fw-semibold text-dark">Số điện thoại</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-phone text-muted"></i>
+                                </span>
+                                <input type="tel" class="form-control border-start-0 ps-0" id="register-phone" 
+                                       placeholder="Nhập số điện thoại" required>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Mật khẩu</label>
-                            <input type="password" class="form-control" id="register-password" required>
+                            <label class="form-label small fw-semibold text-dark">Mật khẩu</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-lock text-muted"></i>
+                                </span>
+                                <input type="password" class="form-control border-start-0 ps-0" id="register-password" 
+                                       placeholder="Nhập mật khẩu" required>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Xác nhận mật khẩu</label>
-                            <input type="password" class="form-control" id="register-confirm-password" required>
+                            <label class="form-label small fw-semibold text-dark">Xác nhận mật khẩu</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <i class="fas fa-lock text-muted"></i>
+                                </span>
+                                <input type="password" class="form-control border-start-0 ps-0" id="register-confirm-password" 
+                                       placeholder="Nhập lại mật khẩu" required>
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Đăng ký</button>
+                        <button type="submit" class="btn btn-primary w-100 py-2 fw-semibold mb-2">
+                            <i class="fas fa-user-plus me-2"></i>Đăng ký
+                        </button>
                     </form>
-                </div>
-                <div class="modal-footer">
-                    <p class="text-center w-100">
-                        <span id="auth-switch-text">Chưa có tài khoản?</span>
-                        <a href="#" id="auth-switch-link" onclick="toggleAuthForm()">Đăng ký ngay</a>
-                    </p>
+
+                    <!-- Divider -->
+                    <div class="text-center my-3">
+                        <hr class="my-3">
+                    </div>
+
+                    <!-- Switch Form Link -->
+                    <div class="text-center">
+                        <p class="mb-0 text-muted small">
+                            <span id="auth-switch-text">Chưa có tài khoản?</span>
+                            <a href="#" id="auth-switch-link" onclick="toggleAuthForm()" class="text-primary fw-semibold text-decoration-none">Đăng ký ngay</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
