--- a/public/index.html
+++ b/public/index.html
@@ -436,5 +436,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="/js/notifications.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/chat.js"></script>
 </body>
 </html>
