Update chat deletion on trip completion and move navigation menu to left side - Explicitly delete messages before conversations in database - Add detailed logging for deletion process - Move main navigation menu to left to avoid overlap with notifications/chat - Keep user menu on right side

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#home">Trang chủ</a>
                     </li>
@@ -41,6 +41,8 @@
                     <li class="nav-item" id="driverreg-nav">
                         <a class="nav-link" href="driver-registration.html">Đăng ký tài xế</a>
                     </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item" id="auth-nav">
                         <a class="nav-link" href="#" onclick="showAuthModal()">Đăng nhập</a>
                     </li>
