--- a/public/index.html
+++ b/public/index.html
@@ -10,53 +10,65 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
+    <nav class="navbar navbar-dark bg-primary">
+        <div class="container-fluid">
+            <button class="btn btn-link text-white p-0 me-3" id="sidebar-toggle" type="button">
+                <i class="fas fa-bars fa-lg"></i>
+            </button>
             <a class="navbar-brand fw-bold" href="#">
                 <i class="fas fa-car"></i> DC Booking
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#home">Trang chủ</a>
-                    </li>
-                    <li class="nav-item d-none" id="booking-nav">
-                        <a class="nav-link" href="views/booking.html" data-auth>Đặt xe</a>
-                    </li>
-                    <li class="nav-item" id="trips-nav">
-                        <a class="nav-link" href="views/trips.html" data-auth>Chuyến đi</a>
-                    </li>
-                    <li class="nav-item" id="drivers-nav">
-                        <a class="nav-link" href="views/drivers.html" data-auth>Tài xế</a>
-                    </li>
-                    <li class="nav-item" id="promos-nav">
-                        <a class="nav-link" href="views/promotions.html" data-auth>Khuyến mãi</a>
-                    </li>
-                    <li class="nav-item d-none" id="driver-stats-nav">
-                        <a class="nav-link" href="views/driver-dashboard.html" data-auth>Thống kê</a>
-                    </li>
-                    <li class="nav-item" id="driverreg-nav">
-                        <a class="nav-link" href="driver-registration.html">Đăng ký tài xế</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item" id="auth-nav">
-                        <a class="nav-link" href="#" onclick="showAuthModal()">Đăng nhập</a>
-                    </li>
-                    <li class="nav-item d-none" id="user-nav">
-                        <div class="dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                                <span id="user-name"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="views/profile.html">Hồ sơ cá nhân</a></li>
-                                <li><a class="dropdown-item" href="views/trips.html">Chuyến đi của tôi</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a></li>
-                            </ul>
+            <div class="ms-auto" id="auth-nav">
+                <a class="btn btn-link text-white text-decoration-none" href="#" onclick="showAuthModal()">Đăng nhập</a>
+            </div>
+            <div class="ms-auto d-none" id="user-nav">
+                <div class="dropdown">
+                    <a class="btn btn-link text-white text-decoration-none dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                        <span id="user-name"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="views/profile.html"><i class="fas fa-user me-2"></i>Hồ sơ cá nhân</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#" onclick="logout()"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Sidebar Menu -->
+    <div class="sidebar-overlay" id="sidebar-overlay"></div>
+    <div class="sidebar-menu" id="sidebar-menu">
+        <div class="sidebar-header">
+            <h5 class="mb-0"><i class="fas fa-car"></i> Menu</h5>
+            <button class="btn-close btn-close-white" id="sidebar-close"></button>
+        </div>
+        <div class="sidebar-body">
+            <ul class="nav flex-column">
+                <li class="nav-item d-none" id="home-nav-sidebar">
+                    <a class="nav-link" href="#home"><i class="fas fa-home me-2"></i>Trang chủ</a>
+                </li>
+                <li class="nav-item d-none" id="booking-nav-sidebar">
+                    <a class="nav-link" href="views/booking.html" data-auth><i class="fas fa-calendar-check me-2"></i>Đặt xe</a>
+                </li>
+                <li class="nav-item d-none" id="trips-nav-sidebar">
+                    <a class="nav-link" href="views/trips.html" data-auth><i class="fas fa-route me-2"></i>Chuyến đi</a>
+                </li>
+                <li class="nav-item d-none" id="drivers-nav-sidebar">
+                    <a class="nav-link" href="views/drivers.html"><i class="fas fa-user-tie me-2"></i>Tài xế</a>
+                </li>
+                <li class="nav-item d-none" id="stats-menu-item-sidebar">
+                    <a class="nav-link" href="views/driver-dashboard.html"><i class="fas fa-chart-bar me-2"></i>Thống kê</a>
+                </li>
+                <li class="nav-item d-none" id="promotions-nav-sidebar">
+                    <a class="nav-link" href="views/promotions.html"><i class="fas fa-gift me-2"></i>Khuyến mãi</a>
+                </li>
+                <li class="nav-item d-none" id="driverreg-nav-sidebar">
+                    <a class="nav-link" href="driver-registration.html"><i class="fas fa-user-plus me-2"></i>Đăng ký tài xế</a>
+                </li>
+            </ul>
+        </div>
+    </div>
                         </div>
                     </li>
                 </ul>
@@ -70,23 +82,32 @@
         <section id="home" class="hero-section">
             <div class="container">
                 <div class="row align-items-center min-vh-100">
-                    <div class="col-lg-6">
-                        <h1 class="display-4 fw-bold text-white mb-4">
-                            Đặt xe nhanh chóng, an toàn và tiện lợi
-                        </h1>
-                        <p class="lead text-light mb-4">
-                            DC Booking - Giải pháp di chuyển thông minh với công nghệ hiện đại
-                        </p>
-                        <div class="d-grid gap-2 d-md-flex">
-                            <a href="views/booking.html" class="btn btn-warning btn-lg px-4" data-auth>
-                                <i class="fas fa-car"></i> Đặt xe ngay
-                            </a>
-                            <button id="signup-btn" class="btn btn-outline-light btn-lg px-4" onclick="showAuthModal()">
-                                <i class="fas fa-user-plus"></i> Đăng ký tài khoản
-                            </button>
+                    <div class="col-lg-6 order-lg-1 order-2">
+                        <div class="hero-content">
+                            <h1 class="display-4 fw-bold mb-4 hero-title">
+                                Đặt xe nhanh chóng, an toàn và tiện lợi
+                            </h1>
+                            <p class="lead mb-4 hero-subtitle">
+                                DC Booking - Giải pháp di chuyển thông minh với công nghệ hiện đại
+                            </p>
+                            <div class="d-grid gap-2 d-md-flex hero-buttons">
+                                <a href="views/booking.html" class="btn btn-warning btn-lg px-4" data-auth>
+                                    <i class="fas fa-car"></i> Đặt xe ngay
+                                </a>
+                                <button id="signup-btn" class="btn btn-outline-light btn-lg px-4" onclick="showAuthModal()">
+                                    <i class="fas fa-user-plus"></i> Đăng ký tài khoản
+                                </button>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 order-lg-2 order-1">
+                        <div class="hero-image-container">
+                            <img src="https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?w=800" 
+                                 alt="DC Car Booking" 
+                                 class="img-fluid hero-image">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 d-none">
                         <div class="booking-card" id="booking-form" style="display: none;">
                             <div class="card shadow-lg">
                                 <div class="card-header bg-warning">
@@ -281,8 +302,16 @@
                 <h2 class="text-center mb-5">Chuyến đi của tôi</h2>
                 
                 <!-- Trip List -->
-                <div class="row" id="trips-list">
-                    <!-- Trip cards will be loaded here -->
+                <div class="trips-carousel-wrapper position-relative">
+                    <button class="carousel-nav-btn carousel-prev" onclick="scrollHomeTrips('left')" style="display: none;">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <div class="trips-carousel" id="trips-list">
+                        <!-- Trip cards will be loaded here -->
+                    </div>
+                    <button class="carousel-nav-btn carousel-next" onclick="scrollHomeTrips('right')" style="display: none;">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
             </div>
         </section>
@@ -292,12 +321,38 @@
     <footer class="bg-dark text-light py-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h5><i class="fas fa-car"></i> DC Car Booking</h5>
-                    <p class="text-muted">Hệ thống đặt xe trực tuyến hàng đầu Việt Nam</p>
+                <div class="col-md-4">
+                    <h5 class="text-white"><i class="fas fa-car"></i> DC Car Booking</h5>
+                    <p class="text-light opacity-75">Hệ thống đặt xe trực tuyến hàng đầu Việt Nam</p>
+                    <div class="mt-3">
+                        <img src="/uploads/bocongthuong/Logo-thong-bao-mau-do-1.png" 
+                             alt="Đã đăng ký Bộ Công Thương" 
+                             style="height: 150px; object-fit: contain;"
+                             onerror="this.style.display='none'">
+                    </div>
                 </div>
-                <div class="col-md-6 text-md-end">
-                    <p class="text-muted mb-0">© 2024 DC Car Booking. All rights reserved.</p>
+                <div class="col-md-4">
+                    <h6 class="text-white mb-3">Liên hệ</h6>
+                    <div class="text-light opacity-75">
+                        <p class="mb-2"><i class="fas fa-phone"></i> Hotline: <a href="tel:1900xxxx" class="text-light text-decoration-none">1900 xxxx</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope"></i> Email: <a href="mailto:support@dcbooking.com" class="text-light text-decoration-none">support@dcbooking.com</a></p>
+                        <p class="mb-2"><i class="fab fa-facebook"></i> Facebook: <a href="https://facebook.com/dccarbook" target="_blank" class="text-light text-decoration-none">DC Booking</a></p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h6 class="text-white mb-3">Địa chỉ</h6>
+                    <p class="text-light opacity-75">
+                        <i class="fas fa-map-marker-alt"></i> Trụ sở chính:<br>
+                        Đại học Công nghệ TP.HCM (HUTECH)<br>
+                        475A Điện Biên Phủ, Phường 25,<br>
+                        Quận Bình Thạnh, TP. Hồ Chí Minh
+                    </p>
+                </div>
+            </div>
+            <hr class="border-secondary my-3">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="text-light opacity-75 mb-0">© 2024 DC Car Booking. All rights reserved.</p>
                 </div>
             </div>
         </div>
