--- a/public/index.html
+++ b/public/index.html
@@ -334,18 +334,18 @@
                 <div class="col-md-4">
                     <h6 class="text-white mb-3">Liên hệ</h6>
                     <div class="text-light opacity-75">
-                        <p class="mb-2"><i class="fas fa-phone"></i> Hotline: <a href="tel:1900xxxx" class="text-light text-decoration-none">1900 xxxx</a></p>
+                        <p class="mb-2"><i class="fas fa-phone"></i> Hotline: <a href="tel:19006789" class="text-light text-decoration-none">1900 6789</a></p>
                         <p class="mb-2"><i class="fas fa-envelope"></i> Email: <a href="mailto:support@dcbooking.com" class="text-light text-decoration-none">support@dcbooking.com</a></p>
-                        <p class="mb-2"><i class="fab fa-facebook"></i> Facebook: <a href="https://facebook.com/dccarbook" target="_blank" class="text-light text-decoration-none">DC Booking</a></p>
+                        <p class="mb-2"><i class="fab fa-facebook"></i> Facebook: <a href="https://web.facebook.com/manhcuonq204" target="_blank" class="text-light text-decoration-none">DC Booking</a></p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <h6 class="text-white mb-3">Địa chỉ</h6>
                     <p class="text-light opacity-75">
-                        <i class="fas fa-map-marker-alt"></i> Trụ sở chính:<br>
-                        Đại học Công nghệ TP.HCM (HUTECH)<br>
-                        475A Điện Biên Phủ, Phường 25,<br>
-                        Quận Bình Thạnh, TP. Hồ Chí Minh
+                        <i class="fas fa-map-marker-alt"></i> Trụ sở:<br>
+                        HUTECH - Đại học Công nghệ TP.HCM (Thu Duc Campus)<br>
+                        Khu Công nghệ cao XLHN, Hiệp Phú,<br>
+                         Thủ Đức, Thành phố Hồ Chí Minh, Việt Nam
                     </p>
                 </div>
             </div>
