--- a/public/driver-registration.html
+++ b/public/driver-registration.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DC Booking - Đăng ký tài xế</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <style>
         body {
             background: linear-gradient(135deg, #000066 0%, #000044 100%);
@@ -59,7 +61,126 @@
         }
     </style>
 </head>
-<body>
+    <!-- Footer -->
+    <footer class="bg-dark text-light py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5 class="text-white"><i class="fas fa-car"></i> DC Car Booking</h5>
+                    <p class="text-light opacity-75">Hệ thống đặt xe trực tuyến hàng đầu Việt Nam</p>
+                    <div class="mt-3">
+                        <img src="/uploads/bocongthuong/Logo-thong-bao-mau-do-1.png" 
+                             alt="Đã đăng ký Bộ Công Thương" 
+                             style="height: 150px; object-fit: contain;"
+                             onerror="this.style.display='none'">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h6 class="text-white mb-3">Liên hệ</h6>
+                    <div class="text-light opacity-75">
+                        <p class="mb-2"><i class="fas fa-phone"></i> Hotline: <a href="tel:19006789" class="text-light text-decoration-none">1900 6789</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope"></i> Email: <a href="mailto:support@dcbooking.com" class="text-light text-decoration-none">support@dcbooking.com</a></p>
+                        <p class="mb-2"><i class="fab fa-facebook"></i> Facebook: <a href="https://web.facebook.com/manhcuonq204" target="_blank" class="text-light text-decoration-none">DC Booking</a></p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h6 class="text-white mb-3">Địa chỉ</h6>
+                    <p class="text-light opacity-75">
+                        <i class="fas fa-map-marker-alt"></i> Trụ sở:<br>
+                        HUTECH - Đại học Công nghệ TP.HCM (Thu Duc Campus)<br>
+                        Khu Công nghệ cao XLHN, Hiệp Phú,<br>
+                         Thủ Đức, Thành phố Hồ Chí Minh, Việt Nam
+                    </p>
+                </div>
+            </div>
+            <hr class="border-secondary my-3">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="text-light opacity-75 mb-0">© 2024 DC Car Booking. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <nav class="navbar navbar-dark bg-primary">
+        <div class="container-fluid">
+            <button class="btn btn-link text-white p-0 me-3" id="sidebar-toggle" type="button">
+                <i class="fas fa-bars fa-lg"></i>
+            </button>
+            <a class="navbar-brand fw-bold" href="index.html">
+                <i class="fas fa-car"></i> DC Booking
+            </a>
+            <div class="ms-auto" id="auth-nav">
+                <a class="btn btn-link text-white text-decoration-none" href="#" onclick="showAuthModal()">Đăng nhập</a>
+            </div>
+            <div class="ms-auto d-none" id="user-nav">
+                <div class="dropdown">
+                    <a class="btn btn-link text-white text-decoration-none dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                        <span id="user-name"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="views/profile.html"><i class="fas fa-user me-2"></i>Hồ sơ cá nhân</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#" onclick="logout()"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Sidebar Menu -->
+    <div class="sidebar-overlay" id="sidebar-overlay"></div>
+    <div class="sidebar-menu" id="sidebar-menu">
+        <div class="sidebar-header">
+            <h5 class="mb-0"><i class="fas fa-car"></i> Menu</h5>
+            <button class="btn-close btn-close-white" id="sidebar-close"></button>
+        </div>
+        <div class="sidebar-body">
+            <!-- Status Toggle (driver) -->
+            <div class="status-toggle-container mb-3">
+                <div class="status-toggle" id="status-container">
+                    <div>
+                        <h6 class="mb-0" id="status-title">
+                            <i class="fas fa-circle me-2" id="status-icon"></i>
+                            <span id="status-text">Đang tải...</span>
+                        </h6>
+                        <small class="text-muted" id="status-description">Đang kiểm tra trạng thái</small>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="statusToggle" onchange="toggleDriverStatus()">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
+                <div class="mt-2 text-center" id="status-info">
+                    <small class="text-muted">Bật để nhận chuyến đi mới</small>
+                </div>
+            </div>
+            <ul class="nav flex-column">
+                <li class="nav-item d-none" id="home-nav-sidebar">
+                    <a class="nav-link" href="index.html"><i class="fas fa-home me-2"></i>Trang chủ</a>
+                </li>
+                <li class="nav-item d-none" id="booking-nav-sidebar">
+                    <a class="nav-link" href="views/booking.html" data-auth><i class="fas fa-calendar-check me-2"></i>Đặt xe</a>
+                </li>
+                <li class="nav-item d-none" id="trips-nav-sidebar">
+                    <a class="nav-link" href="views/trips.html" data-auth><i class="fas fa-route me-2"></i>Chuyến đi</a>
+                </li>
+                <li class="nav-item d-none" id="drivers-nav-sidebar">
+                    <a class="nav-link" href="views/drivers.html"><i class="fas fa-user-tie me-2"></i>Tài xế</a>
+                </li>
+                <li class="nav-item d-none" id="stats-menu-item-sidebar">
+                    <a class="nav-link" href="views/driver-dashboard.html"><i class="fas fa-chart-bar me-2"></i>Thống kê</a>
+                </li>
+                <li class="nav-item d-none" id="promotions-nav-sidebar">
+                    <a class="nav-link" href="views/promotions.html"><i class="fas fa-gift me-2"></i>Khuyến mãi</a>
+                </li>
+                <li class="nav-item d-none" id="driverreg-nav-sidebar">
+                    <a class="nav-link" href="driver-registration.html"><i class="fas fa-user-plus me-2"></i>Đăng ký tài xế</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
@@ -189,8 +310,19 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="/js/notifications.js"></script>
+    <script src="js/app.js"></script>
+    <script>
+        async function loadDriverStatus() {
+            try { const token = localStorage.getItem('token'); if(!token) return; const res = await fetch(`${window.API_BASE_URL}/drivers/my-status`, { headers: { 'Authorization': `Bearer ${token}` } }); const data = await res.json(); if (data && data.success && data.data) updateStatusUI(data.data.trang_thai_tai_xe); } catch (e) { console.debug(e); }
+        }
+        function updateStatusUI(status) {
+            const container = document.getElementById('status-container'); const toggle = document.getElementById('statusToggle'); const icon = document.getElementById('status-icon'); const text = document.getElementById('status-text'); const description = document.getElementById('status-description'); if (!container||!toggle) return; if (status==='san_sang') { container.classList.add('active'); container.classList.remove('inactive'); toggle.checked=true; icon.className='fas fa-circle me-2'; text.textContent='Đang hoạt động'; description.textContent='Bạn có thể nhận chuyến đi mới'; } else { container.classList.remove('active'); container.classList.add('inactive'); toggle.checked=false; icon.className='fas fa-moon me-2'; text.textContent='Không hoạt động'; description.textContent='Bật để bắt đầu nhận chuyến'; }
+        }
+        async function toggleDriverStatus() { const toggle=document.getElementById('statusToggle'); if(!toggle) return; const newStatus = toggle.checked ? 'san_sang' : 'nghi_lam'; try { const token = localStorage.getItem('token'); const res = await fetch(`${window.API_BASE_URL}/drivers/status`, { method:'POST', headers:{ 'Content-Type':'application/json','Authorization':`Bearer ${token}` }, body: JSON.stringify({ trang_thai: newStatus }) }); const data = await res.json(); if (data && data.success) { updateStatusUI(newStatus); showNotification(toggle.checked ? 'Đã bật trạng thái hoạt động' : 'Đã tắt trạng thái hoạt động','success'); } else { toggle.checked = !toggle.checked; showNotification('Không thể thay đổi trạng thái','error'); } } catch (e) { console.error(e); toggle.checked = !toggle.checked; showNotification('Lỗi khi thay đổi trạng thái','error'); } }
+        document.addEventListener('DOMContentLoaded', () => setTimeout(loadDriverStatus, 600));
+    </script>
     <script>
         // Handle simplified form submission
         document.getElementById('driverRegistrationForm').addEventListener('submit', async function(e) {
