--- a/public/driver-registration.html
+++ b/public/driver-registration.html
@@ -319,7 +319,7 @@
                     return;
                 }
 
-                const response = await fetch('/api/auth/register-driver', {
+                const response = await fetch(`${window.API_BASE_URL}/auth/register-driver`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
